[gd_scene load_steps=3 format=3 uid="uid://bu78t6k7r7ix2"]

[ext_resource type="Script" path="res://scripts/fullscreen_Main.gd" id="1_dxr30"]
[ext_resource type="Script" path="res://scripts/database.gd" id="1_v7np7"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dxr30")

[node name="DataBase" type="Node" parent="."]
script = ExtResource("1_v7np7")

[node name="DateLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 61.0
offset_bottom = 23.0
grow_horizontal = 2
text = "20 january 2024"

[node name="DisplayNodes" type="Node" parent="."]

[node name="BodyTextEdit" type="RichTextLabel" parent="DisplayNodes"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -268.0
offset_right = 576.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2

[node name="SummaryTextEdit" type="RichTextLabel" parent="DisplayNodes"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -32.0
offset_right = 128.0
grow_horizontal = 2
grow_vertical = 0

[node name="InsertNodes" type="Node" parent="."]

[node name="BodyTextEdit2" type="TextEdit" parent="InsertNodes"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -268.0
offset_right = 576.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2

[node name="SummaryTextEdit2" type="LineEdit" parent="InsertNodes"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -32.0
offset_right = 128.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
max_length = 60
